fix(Demo): Fix error link width to avoid overlap with close button (#5309)

--- a/demo/demo.less
+++ b/demo/demo.less
@@ -167,6 +167,7 @@ html, body {
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 90%;
 
   /* Some very long URLs can appear in the error text, and word wrapping is very
    * helpful. */
